# plugin-architecture

./: .gitignore  README.md
docker/: docker-compose.yml
docker/configs/mosquitto/config/: mosquitto.conf
docker/configs/mosquitto/passwd/: passwd_file
docker/configs/nodered/data/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  flows.json  flows_cred.json
docker/fakedsmr/: Dockerfile  fakedsmr.py
docker/nodered/: Dockerfile
qt_plugin_poc/: CMakeLists.txt
qt_plugin_poc/mainapp/: CMakeLists.txt  main.cpp
qt_plugin_poc/plugins/goodbyworldplugin/: CMakeLists.txt  goodbyplugininterface.h  goodbyworld.json  goodbyworldplugin.cpp  goodbyworldplugin.h
qt_plugin_poc/plugins/helloworldplugin/: CMakeLists.txt  helloplugininterface.h  helloworld.json  helloworldplugin.cpp  helloworldplugin.h  plugininterface.json
qt_plugin_poc/plugins/p1plugin/: CMakeLists.txt  p1plugin.cpp  p1plugin.h  plugininterface.h
